init & upgrade
